--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Get Time info
         id: getTime
         run: |
-          : 时区设置为 Asia/Shanghai
+          : 时区临时设置为 Asia/Shanghai
           export TZ=Asia/Shanghai
           : 获取时间
           echo "::set-output name=date::$(/bin/date "+%Y-%m-%d_%H-%M-%S-%N")"
@@ -107,6 +107,7 @@ jobs:
             git@github.com:ohmyzsh/ohmyzsh.git ---> git@gitee.com:mirror-hub/ohmyzsh.git
             git@github.com:microsoft/vscode-dev-containers.git ---> git@gitee.com:mirror-hub/vscode-dev-containers.git
             git@github.com:fengyuhetao/shell.git ---> git@gitee.com:mirror-hub/shell.git
+            git@github.com:A-BenMao/pure-bash-bible-zh_CN.git ---> git@gitee.com:mirror-hub/pure-bash-bible-zh_CN.git
             
             git@github.com:hlissner/doom-emacs.git ---> git@gitee.com:emacs-hub/doom-emacs.git
             git@github.com:syl20bnr/spacemacs.git ---> git@gitee.com:emacs-hub/spacemacs.git
