添加awesome-tray仓库的同步

--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -115,6 +115,7 @@ jobs:
             git@github.com:manateelazycat/aweshell.git ---> git@gitee.com:emacs-hub/aweshell.git
             git@github.com:manateelazycat/awesome-pair.git ---> git@gitee.com:emacs-hub/awesome-pair.git
             git@github.com:manateelazycat/awesome-tab.git ---> git@gitee.com:emacs-hub/awesome-tab.git
+            git@github.com:manateelazycat/awesome-tray.git ---> git@gitee.com:emacs-hub/awesome-tray.git
             git@github.com:manateelazycat/color-rg.git ---> git@gitee.com:emacs-hub/color-rg.git
             git@github.com:manateelazycat/company-english-helper.git ---> git@gitee.com:emacs-hub/company-english-helper.git
             git@github.com:manateelazycat/emacs-application-framework.git ---> git@gitee.com:emacs-hub/emacs-application-framework.git
