--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -123,6 +123,7 @@ jobs:
             git@github.com:manateelazycat/snails.git  git@gitee.com:emacs-hub/snails.git
             git@github.com:manateelazycat/thing-edit.git ---> git@gitee.com:emacs-hub/thing-edit.git
             git@github.com:manateelazycat/one-key.git ---> git@gitee.com:emacs-hub/one-key.git
+            git@github.com:manateelazycat/popweb.git ---> git@gitee.com:emacs-hub/popweb.git
             git@github.com:magnars/s.el.git ---> git@gitee.com:emacs-hub/s.el.git
             git@github.com:redguardtoo/pyim-tsinghua-dict.git ---> git@gitee.com:emacs-hub/pyim-tsinghua-dict.git
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
