--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -107,6 +107,7 @@ jobs:
             git@github.com:microsoft/vscode-dev-containers.git ---> git@gitee.com:mirror-hub/vscode-dev-containers.git
             git@github.com:fengyuhetao/shell.git ---> git@gitee.com:mirror-hub/shell.git
             git@github.com:A-BenMao/pure-bash-bible-zh_CN.git ---> git@gitee.com:mirror-hub/pure-bash-bible-zh_CN.git
+            git@github.com:ObKo/stm32-cmake.git ---> git@gitee.com:mirror-hub/stm32-cmake.git
             
             git@github.com:hlissner/doom-emacs.git ---> git@gitee.com:emacs-hub/doom-emacs.git
             git@github.com:syl20bnr/spacemacs.git ---> git@gitee.com:emacs-hub/spacemacs.git
