--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -108,6 +108,7 @@ jobs:
             git@github.com:fengyuhetao/shell.git ---> git@gitee.com:mirror-hub/shell.git
             git@github.com:A-BenMao/pure-bash-bible-zh_CN.git ---> git@gitee.com:star-hub/pure-bash-bible-zh_CN.git
             git@github.com:ObKo/stm32-cmake.git ---> git@gitee.com:star-hub/stm32-cmake.git
+            git@github.com:openocd-org/openocd.git ---> git@gitee.com:mirror-hub/openocd.git
             
             git@github.com:hlissner/doom-emacs.git ---> git@gitee.com:emacs-hub/doom-emacs.git
             git@github.com:syl20bnr/spacemacs.git ---> git@gitee.com:emacs-hub/spacemacs.git
